2001-04-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Remove_from_area() intrinsic, Chunk_object_list::find_in_area(),
	for fixing maze in Silver Seed.

2001-04-26  Jeff Freedman  <jeff@amy.nerble.net>

	* SI spellbook working now.  Still have to redo reagant use/check.

2001-04-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Spell-scrolls implemented for SI.

2001-04-23  Ryan Nunn  <triforce@merlin.net.au>
	* ChangeLog : Fixed Dancer's small date typo... 2001-04-32 :)
	* keys.*, keyactions.* : Key action "newfile_gump" to activate the new
	  file gump without having to go into the game menu.

2001-04-23  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: Support repo and (the somewhat deprecated)
	  alt-external template instantiations.

2001-04-23  Dancer Vesperman <dancer@users.sourceforge.net>
	* g++ v3.0 can inline an implementation body....but that makes
	  it invisible to other translation units (because it's inline and
	  no longer exists as a seperate entity. Duh). Therefore, actors.cc:
	  except add_dirty() from being inlined under G++ v3 and later.
	  Same deal for get_tile_info()
	  More on this in a later update.
	* objs/objlist.h: Mark some members const to improve code-generation

2001-04-22  Max Horn  <max@quendi.de>
	* lots of namespace std:: changes, made it compile on MacOS again
	  (still need to implement U7ListFiles)

2001-04-22  Ryan Nunn <triforce@merlin.net.au>
	* gumps/Newfile_gump.* : Changed Date format display.

2001-04-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* imagewin/imagewin.*, iwin8.*: moved mini_screenshot to iwin8, use
	a nearest average colour scaler
	* files/listfiles.cc: added config.h
	* Makefile.am: changed library order
	* gumps/Newfile_gump.cc: put some debugging output in #ifdef DEBUG's

2001-04-22  Ryan Nunn <triforce@merlin.net.au>
	* Makefiles.* : Added files/listfiles.* and gumps/Newfile_gump.*
	* actorio.cc : Made a change to the size of the array used when reading
	  a NPC name from npc.dat. 