@@ -28,7 +28,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "ucsym.h"
 
 class Uc_statement;
-#include <iosfwd>
+#ifndef ALPHA_LINUX_CXX
+#  include <iosfwd>
+#endif
 
 /* 
  *	This represents a usecode function:
