@@ -25,6 +25,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef INCL_UCSYM
 #define INCL_UCSYM
 
+#include <config.h>
 #include <string>
 #include <map>
 #include <vector>
